--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "escape-html": "^1.0.1",
     "rethinkdb": "^1.13.0-1",
     "serve-static": "^1.3.2",
+    "string-escape": "^0.3.0",
     "swig": "^1.4.1"
   },
   "devDependencies": {
